--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@
 # Web related
 lib/generated_plugin_registrant.dart
 
+# firebase key
+lib/assets/credential.json
 # Symbolication related
 app.*.symbols
 
